--- a/css/miscreaciones.css
+++ b/css/miscreaciones.css
@@ -1,62 +1,77 @@
 body{
-   font-family: 'Signika Negative', sans-serif;
+   font-family: 'Bebas Neue', sans-serif;
 }
- 
- .contenedor {
-    width: 100%;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
- }
 
- .titulo{
-   font-size: 45px; 
-   color:bisque; 
-   font-weight: 700;
- }
+.contenedor{
+   width: 100%;
+   height: 100vH;
+   margin: 0;
+   padding: 0;
+}
 
- .encabezado {
-    width: 100%;
-    height: 80px;
-    display : flex; 
-    align-items: center;
-    justify-content: center;
- }
+.encabezado{
+   width: 100%;
+   height: 80px;
+   background: rgb(0, 128, 109);
+}
 
- .informacion {
-    width: 100%;
-    height: calc(100vh-80px);
-    background: rgb(250, 230, 242);
-    display: flex; 
- }
+.informacion{
+   width: 100%;
+   height: calc(100vh - 80px);
+   display: flex;
+}    
 
- .articulos {
+.articulos{
    width: 75%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    overflow: scroll;
- }
+   height: 100%;
+   display: flex;
+   flex-direction: row;
+   flex-wrap: wrap;
+   justify-content: space-evenly;
+   overflow-y: scroll;
+}
 
- .menu {
-    width: 25%;
-    height: 100%;
-    background: rgb(230, 230, 250);
- }
+.menu{
+   width: 25%;
+   height: 100%;
+   background: rgb(0, 229, 255);
+   display: flex;
+   flex-direction: column;
+   justify-content: space-evenly;
+   align-items: center;
+}
+
+.titulo{
+   font-size: 3rem;
+   color: salmon;
+   font-weight: 700;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
 
 .nota{
-   width: 40;
-   height: 400%;
+   width: 40%;
+   height: 300px;
    background: beige;
-   margin: 4px;
-   border-style: dashed;
+   margin: 10px;
+   border-color: darkcyan;
+   border-style: solid;
    border-radius: 10px;
    padding: 5px;
 }
 
 .nota:hover {
-   background-color: blueviolet;
+   background: yellow;
+}
 
+.btnvinculo {
+   display: block;
+   text-decoration: none;
+   color: black !important;
+   background: blue;
+   border-radius: 5px;
+   border-color: brown;
+   border-width: 1px;
+   padding: 10px;
 }
